<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juanjofajardo.tallerperfil.MainActivity">


    <RelativeLayout
        android:id="@+id/RR1"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/paisaje"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/ar"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/texto2"
            android:layout_marginEnd="77dp"
            android:layout_marginRight="77dp"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4"
            android:text="Followers"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="42"
            android:textSize="30dp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/paisaje"
            android:weightSum="1"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="42"
            android:textSize="30dp"
            android:layout_marginLeft="30dp"
            android:layout_below="@id/paisaje"
            android:weightSum="1"
            android:textStyle="normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stories"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@id/texto1"
            android:weightSum="1"
            android:id="@+id/textView2" />

        <TextView
            android:id="@+id/texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="517"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_below="@+id/paisaje"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4"
            android:layout_marginRight="96dp"
            android:layout_marginEnd="96dp" />
        <TextView
            android:id="@+id/textfoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Followers"
            android:textSize="20dp"
            android:layout_below="@+id/texto2"
            android:layout_toLeftOf="@+id/textView4"
            android:layout_toStartOf="@+id/textView4"
            android:layout_marginRight="77dp"
            android:layout_marginEnd="77dp" />
        <TextView
            android:id="@+id/texto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="284"
            android:textSize="30dp"
            android:layout_below="@id/paisaje"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:weightSum="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Following"
            android:textSize="20dp"
            android:weightSum="1"
            android:id="@+id/textView4"
            android:layout_below="@+id/texto3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="21dp"
            android:layout_marginEnd="21dp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textfoll">



            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@android:color/white">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal"
                        android:padding="10dp">
                        <ImageView
                            android:id="@+id/imagen1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/chris_evans_1_100x100" />
                        <TextView
                            android:id="@+id/txt_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/imagen1"
                            android:layout_toRightOf="@+id/imagen1"
                            android:text="@string/cris"
                            android:textStyle="bold"
                            android:textColor="@android:color/white" />
                        <TextView
                            android:id="@+id/txt_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/txt_0"
                            android:layout_toEndOf="@+id/imagen1"
                            android:layout_toRightOf="@+id/imagen1"
                            android:text="@string/tx1"
                            android:textColor="@android:color/white"
                            android:layout_alignBottom="@+id/imagen1" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/holo_orange_dark"
                        android:orientation="horizontal"
                        android:padding="10dp">
                        <ImageView
                            android:id="@+id/imagen2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/robert" />
                        <TextView
                            android:id="@+id/txt_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/imagen2"
                            android:layout_toRightOf="@+id/imagen2"
                            android:text="@string/robert"
                            android:textStyle="bold"
                            android:textColor="@android:color/white" />
                        <TextView
                            android:id="@+id/txt_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/txt_2"
                            android:layout_toEndOf="@+id/imagen2"
                            android:layout_toRightOf="@+id/imagen2"
                            android:text="@string/tx2"
                            android:textColor="@android:color/white"
                            android:layout_alignBottom="@+id/imagen2" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/darker_gray"
                        android:orientation="horizontal"
                        android:padding="10dp">
                        <ImageView
                            android:id="@+id/imagen3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/sebas" />
                        <TextView
                            android:id="@+id/txt_5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/imagen3"
                            android:layout_toRightOf="@+id/imagen3"
                            android:text="@string/sebas"
                            android:textStyle="bold"
                            android:textColor="@android:color/white" />
                        <TextView
                            android:id="@+id/txt_6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/txt_5"
                            android:layout_toEndOf="@+id/imagen3"
                            android:layout_toRightOf="@+id/imagen3"
                            android:text="@string/tx3"
                            android:textColor="@android:color/white"
                            android:layout_alignBottom="@+id/imagen3" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@android:color/black"
                        android:orientation="horizontal"
                        android:padding="10dp">
                        <ImageView
                            android:id="@+id/imagen4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/descarga" />
                        <TextView
                            android:id="@+id/txt_7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_toEndOf="@+id/imagen4"
                            android:layout_toRightOf="@+id/imagen4"
                            android:text="@string/scarlet"
                            android:textStyle="bold"
                            android:textColor="@android:color/white" />
                        <TextView
                            android:id="@+id/txt_8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/txt_7"
                            android:layout_toEndOf="@+id/imagen4"
                            android:layout_toRightOf="@+id/imagen4"
                            android:text="@string/tx4"
                            android:textColor="@android:color/white"
                            android:layout_alignBottom="@+id/imagen4" />
                    </RelativeLayout>


                </LinearLayout>

            </ScrollView>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
